home-assistant/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
spec:
  replicas: 1
  template:
    metadata:
      name: home-assistant
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: home-assistant
          image: homeassistant/home-assistant:2024.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8123
              name: web
          volumeMounts:
            - mountPath: /config
              name: home-assistant-data
            - mountPath: /config/default_configuration.yaml
              subPath: configuration.yaml
              name: home-assistant-config
          securityContext:
            privileged: false
      restartPolicy: Always
      volumes:
        - name: home-assistant-data
        - name: home-assistant-config
          configMap:
            name: home-assistant-config
            items:
              - key: configuration.yaml
                path: default_configuration.yaml
