home-assistant/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  selector:
    app: home-assistant
  ports:
    - name: web
      targetPort: web
      port: 8123
      protocol: TCP
  type: ClusterIP
